[package]
name = "osstrtools"
version = "0.1.1"
authors = ["rabite"]
edition = "2018"
description = "Additional helper methods for OsStr"
homepage = "https://github.com/rabite0/osstrtools"
repository = "https://github.com/rabite0/osstrtools"
license = "WTFPL"
keywords = ["unix", "linux", "filename", "osstr", "osstring"]
categories = ["command-line-utilities"]
